@@ -6,6 +6,9 @@ TODO:
 
 2013-01-17 MickeM
  * Added nsclient-full.ini with "all" (non advanced) avalible options.
+ * Fix for reloading settings from file from script: core:reload('settings') will not work.
+   Notice it still will onlya reload the settings not the modules so modules have to be reloaded manually.
+ * Fixed return code issue in nsclient-ini full generator.
 
 2013-01-13 MickeM
  * Fixed crash when collector thread is not started.
